added some code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <section>
  <header class="header">
     <div class="banner">
         <div>
@@ -21,6 +22,7 @@
 <img src="images/pngwing 10.png" alt="">
 </div>
 </header>
+</section>
 
     <main>
         <section>
@@ -31,19 +33,17 @@
             </div>
             <div class="scnd-image">
             <img class="img1" src="images/pngwing 6.png" alt="">
-            <div class="img-text"> <h2>Pink Flower Tree</h2> </div>
             <img class="img2" src="images/pngwing 5.png" alt="">
-            <div class="img-text"> 
-                <h2>Pink Flower Tree</h2>
+            <img class="img3" src="images/pngwing 7.png" alt="">
+            </div>
+             <div class="img-text"> 
+                <p>Pink Flower Tree</p>
+                <p>Pink Flower Tree</p>
+                <p>Pink Flower Tree</p>
                 </div>
 
-            <img class="img3" src="images/pngwing 7.png" alt="">
-            <div class="img-text"> 
-                <h2> Pink Flower Tree</h2> 
-
-                 </div>       
-            </div>
-            
+        
+            <section>
             <header class="header">
                 <div class="banner">
                     <div>
@@ -57,6 +57,7 @@
             <img src="images/pngwing 8.png" alt="">
             </div>
             </header>
+            </section>
             <section>
                 <div class="header3">
 <h1>Instagram</h1>
@@ -78,6 +79,7 @@
 <p>$30 coupon for first shopping</p>
 </div>
 
+<div>
 
 </div>
 
